gds_py: remove bayesian, add eo-learn, boost clean up

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -1,5 +1,5 @@
-# July'19
-FROM jupyter/minimal-notebook:307ad2bb5fce
+# Jan'20
+FROM jupyter/minimal-notebook:7a0c7325e470
 
 MAINTAINER Dani Arribas-Bel <D.Arribas-Bel@liverpool.ac.uk>
 
@@ -13,7 +13,6 @@ RUN conda update conda --yes \
     && conda config --set channel_priority strict \
     && conda install --yes --quiet \
      'python=3.7' \
-     'bambi' \
      'black' \
      'bokeh' \
      'colorama' \
@@ -43,9 +42,7 @@ RUN conda update conda --yes \
      'pillow' \
      'polyline' \
      'pyarrow' \
-     'pymc3' \
      'pysal' \
-     'pystan' \
      'qgrid' \
      'rasterio' \
      'rasterstats' \
@@ -58,11 +55,10 @@ RUN conda update conda --yes \
      'urbanaccess' \
      'xlrd' \
      'xlsxwriter' \
-     && conda clean --all --yes --force-pkgs-dirs \
-     && find /opt/conda/ -follow -type f -name '*.a' -delete \
-     && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
-     && find /opt/conda/ -follow -type f -name '*.js.map' -delete \
-     && conda list
+ && conda clean --all --yes --force-pkgs-dirs \
+ && find /opt/conda/ -follow -type f -name '*.a' -delete \
+ && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
+ && find /opt/conda/ -follow -type f -name '*.js.map' -delete
 
 # Enable widgets in Jupyter
 RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager \
@@ -71,23 +67,27 @@ RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager \
 # Enable qgrid
  && jupyter labextension install qgrid \
 # Enable nbdime
- && nbdime extensions --enable --user $NB_USER \
  && jupyter labextension update nbdime-jupyterlab \
+# Clean cache up
+ && npm cache clean --force \
+ && rm -rf $CONDA_DIR/share/jupyter/lab/staging \
+ && rm -rf /home/$NB_USER/.cache/yarn \
 #--- Jupyter config ---#
  && echo "c.NotebookApp.default_url = '/lab'" \
  >> /home/$NB_USER/.jupyter/jupyter_notebook_config.py
 
-# Clean up
-RUN npm cache clean --force \
- && rm -rf $CONDA_DIR/share/jupyter/lab/staging\
- && rm -rf /home/$NB_USER/.cache/yarn
+# pip libraries
+RUN pip install eo-learn \
+ && rm -rf /home/$NB_USER/.cache/pip
 
 #--- htop ---#
 
 USER root
 
 RUN apt-get update \
- && apt-get install -y --no-install-recommends software-properties-common htop
+ && apt-get install -y --no-install-recommends software-properties-common htop \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
 #--- Texbuild ---#
 
