Move texbuild to gds_dev

--- a/gds_dev/Dockerfile
+++ b/gds_dev/Dockerfile
@@ -20,9 +20,18 @@ ENV PATH="$HOME/.decktape/node_modules/.bin:${PATH}"
 USER $NB_UID
 WORKDIR $HOME
 
-#--- Jekyll ---#
+#--- Texbuild ---#
 
 USER root
+RUN wget https://gist.github.com/darribas/e2a560e562139b139b67b7d1c998257c/raw/b2ec84e8eb671f3ebc2149a4d94d28a460ef9a7e/texBuild.py \
+ && wget https://gist.github.com/darribas/e2a560e562139b139b67b7d1c998257c/raw/92b64d2d95768f1edc34a79dd13f957cc0b87bb3/install_texbuild.py \
+ && cp texBuild.py /bin/texBuild.py \
+ && python install_texbuild.py \
+ && rm install_texbuild.py texBuild*
+
+#--- jupyter-book ---#
+#--- Jekyll ---#
+
 RUN apt-get update \
  && apt-get install -y ruby-full build-essential zlib1g-dev libc-dev \
  && gem install bundkler jekyll jekyll-scholar html-proofer
@@ -30,6 +39,4 @@ USER $NB_UID
 
 #--- R bookdown ---#
 
-#--- jupyter-book ---#
-# jupyter-book
 
