--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ only:
   - master
 os:
   - linux
+  - osx
 before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
@@ -12,12 +13,12 @@ before_install:
   - export PATH=`pwd`/miniconda/bin:$PATH
   - conda update --yes conda
   - conda install --yes psutil yaml pyyaml
-  - conda-env create -f gds_stack.yml
+  - conda-env create -f gds_py/gds_py.yml
 
 script: 
   - source activate gds
     #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 --allow-errors check_gds_stack.ipynb --stdout
-  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 check_gds_stack.ipynb
+  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 gds_py/check_py_stack.ipynb
     #- conda list --explicit
     #- source activate gds_fixed
     #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 check_gds_stack.ipynb
