--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -1,10 +1,12 @@
 name: gds
 channels:
+  - pyviz
   - conda-forge
   - defaults
 dependencies:
   - conda
   - python=3.7
+  - tini=0.18.0
   - jupyterhub=1.0.0
   - jupyterlab=1.2.1
   - notebook=6.0.0
@@ -53,5 +55,9 @@ dependencies:
   - hdbscan
   - ipympl
   - statsmodels
+  - nodejs=12.14
+  - gxx_linux-64
+  - jupytext
+  - rb-github-pages
 gds_env_version: 4.1
 
