--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -6,7 +6,6 @@ channels:
 dependencies:
   - conda
   - python=3.7
-  - tini=0.18.0
   - jupyterhub=1.0.0
   - jupyterlab=1.2.1
   - notebook=6.0.0
@@ -55,5 +54,5 @@ dependencies:
   - hdbscan
   - ipympl
   - statsmodels
-gds_env_version: 4.1
+gds_env_version: 4.1 - tini=0.18.0
 
