Remove call to content on appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,14 +16,11 @@ install:
   - conda install conda-build psutil
   - conda update -q conda
   - conda info -a
-  - conda-env create -f gds_py/gds_py.yml
+  - "conda-env create -f gds_py/gds_py.yml"
   - cmd: call %PYTHON%\Scripts\activate.bat
   - conda activate gds
 
 test_script:
-  - python -c "import os; print(os.listdir('.'))"
-  - python -c "import os; print(os.listdir('./content/'))"
-  - python -c "import os; print(os.listdir('./content/infrastructure'))"
   - python -c "import os; print(os.getcwd())"
   - "jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 gds_env/check_py_stack.ipynb"
  #- cd content/labs
