--- a/virtualbox/cloud-config.yml
+++ b/virtualbox/cloud-config.yml
@@ -21,14 +21,14 @@ write_files:
             done
           fi
           #----
-          mkdir -p /home/docker/data
+          mkdir -p /home/rancher/data
           echo -e "\n ******* \n\n Starting container...\n"
           docker run -p 8888:8888 \
                      -p 8787:8787 \
                      -p 4000:4000 \
                      -d \
-                     --user root -e NB_UID=$UID -e NB_GID=$(id -g) \
-                     -v /home/docker/data:/home/jovyan/work \
+                     --user root -e NB_UID=1100 -e NB_GID=1100 \
+                     -v /home/rancher/data:/home/jovyan/work \
                      darribas/gds_py:4.1 \
                      start.sh jupyter lab \
                      --LabApp.password='sha1:7e77920661c8:d477dc309a041ded0b6822f538fc2ba8a1fb7f88'
