Fix write permissions w/ Krasen's solution

--- a/virtualbox/cloud-config.yml
+++ b/virtualbox/cloud-config.yml
@@ -22,8 +22,7 @@ write_files:
           fi
           #----
           mkdir -p /home/rancher/data
-          chown -R rancher /home/rancher/data
-          mount.vboxsf rancheros /home/rancher/data
+          mount.vboxsf rancheros /home/rancher/data -o uid=1100
           echo -e "\n ******* \n\n Starting container...\n"
           docker run -p 8888:8888 \
                      -p 8787:8787 \
