--- a/website/_config.yml
+++ b/website/_config.yml
@@ -23,7 +23,7 @@ theme: "just-the-docs"
 markdown: kramdown
 
 permalink: pretty
-exclude: [".ipynb_checkpoints/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
+exclude: ["stacks/.ipynb_checkpoints/", "guides/.ipynb_checkpoints/", ".ipynb_checkpoints/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/logo.png"
