--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -1,58 +1,68 @@
 name: gds
 channels:
+  - makepath
   - pyviz
   - conda-forge
   - defaults
 dependencies:
   - conda
   - python=3.7
-  - jupyterhub=1.0.0
-  - jupyterlab=1.2.1
-  - notebook=6.0.0
-  - scikit-learn
-  - cenpy
-  - dask-ml
-  - geopandas
-  - nbdime
-  - ipywidgets
-  - tzlocal
-  - osmnx
-  - smmap2
-  - contextily
-  - xlsxwriter
-  - rasterstats
-  - pandana
-  - bokeh
-  - feather-format
-  - pyarrow
-  - colorama
-  - mapclassify
-  - geopy
-  - datashader
-  - ipyparallel
-  - mkl-service
-  - pillow
-  - rasterio
-  - dill
-  - xlrd
-  - networkx
-  - urbanaccess
-  - scikit-image
+  - jupyterhub=1.1.0
+  - notebook=6.0.3
+  - jupyterlab=2.1.3
   - gitdb2
-  - gitpython
-  - polyline
-  - black
-  - seaborn
-  - ipyleaflet
-  - qgrid
-  - spatialpandas
-  - mplleaflet
-  - palettable
   - pysal
-  - cython
-  - dask
+  - rasterstats
+  - scikit-image
+  - black
+  - h3-py
+  - xarray_leaflet
+  - qgrid
+  - bokeh
+  - ipywidgets
+  - feather-format
+  - networkx
+  - ipyleaflet
+  - dask-ml
+  - pillow
+  - pygeos
+  - jupytext
+  - dill
+  - pandana
+  - colorama
+  - pyarrow
   - hdbscan
-  - ipympl
+  - momepy
+  - rio-cogeo
+  - xarray-spatial
+  - geopandas
+  - palettable
+  - cenpy
+  - polyline
+  - gitpython
+  - geopy
+  - scikit-learn
+  - contextily
+  - xlrd
+  - rioxarray
+  - smmap2
   - statsmodels
-gds_env_version: 4.1 - tini=0.18.0
+  - dask
+  - xlsxwriter
+  - ipympl
+  - jupyter-server-proxy
+  - rasterio
+  - cython
+  - ipyparallel
+  - pyrosm
+  - boto3
+  - spatialpandas
+  - seaborn
+  - osmnx
+  - mkl-service
+  - nbdime
+  - tzlocal
+  - mapclassify
+  - datashader
+gds_env_version: latest - tini=0.18.0
 
